--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -16,7 +16,7 @@ div {
 
 .title {
   margin-left: 40px;
-  font-size: 16px;
+  font-size: 5vw;
   font-weight: normal;
   color: white;
   background-color: #f75291;
